# monitor-widget

./: .gitignore  CMakeLists.txt
src/: cpuinfo.c  cpuinfo.h  main.c  meminfo.c  meminfo.h  mtk_cpu_widget.c  mtk_cpu_widget.h  mtk_ram_widget.c  mtk_ram_widget.h  mtk_settings.c  mtk_settings.h  mtk_thread_widget.c  mtk_thread_widget.h  mtk_user_data.c  mtk_user_data.h
